--- a/Typescript_Source_Code/code_to_compile/Seven/Main.vm
+++ b/Typescript_Source_Code/code_to_compile/Seven/Main.vm
@@ -1,4 +1,3 @@
-
 function Main.main 0
 push constant 1
 push constant 2
@@ -6,5 +5,6 @@ push constant 3
 call Math.multiply 2
 add
 call Output.printInt 1
+pop temp 0
 push constant 0
 return
