I am following along JackCompiler.bat generated VM code and implementing my compiler... Stopped at Average/Main.vm line label WHILE_EXP0

--- a/Typescript_Source_Code/code_to_compile/Average/Main.vm
+++ b/Typescript_Source_Code/code_to_compile/Average/Main.vm
@@ -1,4 +1,3 @@
-
 function Main.main 4
 push constant 18
 call String.new 1
@@ -45,10 +44,15 @@ call Array.new 1
 pop local 0
 push constant 0
 pop local 2
+label WHILE_EXP0
 push local 2
 push local 1
-undefined
+lt
+not
+if-goto WHILE_END0
 push local 2
+push local 0
+add
 push constant 16
 call String.new 1
 push constant 69
@@ -84,15 +88,24 @@ call String.appendChar 2
 push constant 32
 call String.appendChar 2
 call Keyboard.readInt 1
-pop local 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push local 3
 push local 2
+push local 0
+add
+pop pointer 1
+push that 0
 add
 pop local 3
 push local 2
 push constant 1
 add
 pop local 2
+goto WHILE_EXP0
+label WHILE_END0
 push constant 15
 call String.new 1
 push constant 84
@@ -126,9 +139,11 @@ call String.appendChar 2
 push constant 32
 call String.appendChar 2
 call Output.printString 1
+pop temp 0
 push local 3
 push local 1
-undefined
+call Math.divide 2
 call Output.printInt 1
+pop temp 0
 push constant 0
 return
