--- a/Typescript_Source_Code/code_to_compile/Average/Main.jack.vm
+++ b/Typescript_Source_Code/code_to_compile/Average/Main.jack.vm
@@ -45,10 +45,14 @@ call Array.new 1
 pop local 0
 push constant 0
 pop local 2
+label WHILE_EXP0
 push local 2
 push local 1
-undefined
+lt
+not
+if-goto WHILE_END0
 push local 2
+add
 push constant 16
 call String.new 1
 push constant 69
@@ -93,6 +97,8 @@ push local 2
 push constant 1
 add
 pop local 2
+goto WHILE_EXP0
+label WHILE_END0
 push constant 15
 call String.new 1
 push constant 84
