--- a/Typescript_Source_Code/code_to_compile/Average/Main.jack.vm
+++ b/Typescript_Source_Code/code_to_compile/Average/Main.jack.vm
@@ -132,9 +132,11 @@ call String.appendChar 2
 push constant 32
 call String.appendChar 2
 call Output.printString 1
+pop temp 0
 push local 3
 push local 1
 undefined
 call Output.printInt 1
+pop temp 0
 push constant 0
 return
