--- a/Typescript_Source_Code/code_to_compile/Average/Main.jack.my.vm
+++ b/Typescript_Source_Code/code_to_compile/Average/Main.jack.my.vm
@@ -1,6 +1,5 @@
 
 function Main.main 4
-push local 1
 push constant 18
 call String.new 1
 push constant 72
@@ -40,23 +39,12 @@ call String.appendChar 2
 push constant 32
 call String.appendChar 2
 call Keyboard.readInt 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
-push local 0
+pop local 1
 push local 1
 call Array.new 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
-push local 2
+pop local 0
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 label WHILE_EXP0
 push local 2
 push local 1
@@ -106,23 +94,17 @@ pop pointer 1
 push temp 0
 pop that 0
 push local 3
-push local 3
 push local 0
 push local 2
 add
-add
-pop temp 0
 pop pointer 1
-push temp 0
-pop that 0
-push local 2
+push that 0
+add
+pop local 3
 push local 2
 push constant 1
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 goto WHILE_EXP0
 label WHILE_END0
 push constant 15
