--- a/Typescript_Source_Code/code_to_compile/Pong/Main.jack.my.vm
+++ b/Typescript_Source_Code/code_to_compile/Pong/Main.jack.my.vm
@@ -2,12 +2,8 @@
 function Main.main 1
 call PongGame.newInstance 0
 pop temp 0
-push local 0
 call PongGame.getInstance 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop thsat 0
+pop local 0
 push local 0
 call PongGame.run 1
 pop temp 0
