--- a/Typescript_Source_Code/code_to_compile/Square/Main.jack.my.vm
+++ b/Typescript_Source_Code/code_to_compile/Square/Main.jack.my.vm
@@ -1,11 +1,7 @@
 
 function Main.main 1
-push local 0
 call SquareGame.new 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop thsat 0
+pop local 0
 push local 0
 call SquareGame.run 1
 pop temp 0
