all programs now work except for Pong.

--- a/Typescript_Source_Code/code_to_compile/Pong/PongGame.vm
+++ b/Typescript_Source_Code/code_to_compile/Pong/PongGame.vm
@@ -1,8 +1,7 @@
-
+function PongGame.new 0
 push constant 7
 call Memory.alloc 1
 pop pointer 0
-function PongGame.new 0
 call Screen.clearScreen 0
 pop temp 0
 push constant 50
@@ -66,9 +65,9 @@ push constant 0
 pop this 5
 push pointer 0
 return
+function PongGame.dispose 0
 push argument 0
 pop pointer 0
-function PongGame.dispose 0
 push this 0
 call Bat.dispose 1
 pop temp 0
@@ -88,15 +87,15 @@ return
 function PongGame.getInstance 0
 push static 0
 return
+function PongGame.run 1
 push argument 0
 pop pointer 0
-function PongGame.run 1
-label PongGame.run$WHILE_EXP0
+label WHILE_EXP0
 push this 3
 not
 not
-if-goto PongGame.run$WHILE_END0
-label PongGame.run$WHILE_EXP1
+if-goto WHILE_END0
+label WHILE_EXP1
 push local 0
 push constant 0
 eq
@@ -104,54 +103,57 @@ push this 3
 not
 and
 not
-if-goto PongGame.run$WHILE_END1
+if-goto WHILE_END1
 call Keyboard.keyPressed 0
 pop local 0
 push this 0
 call Bat.move 1
 pop temp 0
+push pointer 0
+call PongGame.moveBall 1
 pop temp 0
 push constant 50
 call Sys.wait 1
 pop temp 0
-goto PongGame.run$WHILE_EXP1
-label PongGame.run$WHILE_END1
+goto WHILE_EXP1
+label WHILE_END1
 push local 0
 push constant 130
 eq
-not
-if-goto PongGame.run$IF_ELSE0
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push this 0
 push constant 1
 call Bat.setDirection 2
 pop temp 0
-goto PongGame.run$IF_END0
-label PongGame.run$IF_ELSE0
+goto IF_END0
+label IF_FALSE0
 push local 0
 push constant 132
 eq
-not
-if-goto PongGame.run$IF_ELSE1
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push this 0
 push constant 2
 call Bat.setDirection 2
 pop temp 0
-goto PongGame.run$IF_END1
-label PongGame.run$IF_ELSE1
+goto IF_END1
+label IF_FALSE1
 push local 0
 push constant 140
 eq
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push constant 0
 not
-if-goto PongGame.run$IF_ELSE2
-push constant 1
-neg
 pop this 3
-goto PongGame.run$IF_END2
-label PongGame.run$IF_ELSE2
-label PongGame.run$IF_END2
-label PongGame.run$IF_END1
-label PongGame.run$IF_END0
-label PongGame.run$WHILE_EXP2
+label IF_FALSE2
+label IF_END1
+label IF_END0
+label WHILE_EXP2
 push local 0
 push constant 0
 eq
@@ -160,23 +162,26 @@ push this 3
 not
 and
 not
-if-goto PongGame.run$WHILE_END2
+if-goto WHILE_END2
 call Keyboard.keyPressed 0
 pop local 0
 push this 0
 call Bat.move 1
 pop temp 0
+push pointer 0
+call PongGame.moveBall 1
 pop temp 0
 push constant 50
 call Sys.wait 1
 pop temp 0
-goto PongGame.run$WHILE_EXP2
-label PongGame.run$WHILE_END2
-goto PongGame.run$WHILE_EXP0
-label PongGame.run$WHILE_END0
+goto WHILE_EXP2
+label WHILE_END2
+goto WHILE_EXP0
+label WHILE_END0
 push this 3
-not
-if-goto PongGame.run$IF_ELSE3
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 10
 push constant 27
 call Output.moveCursor 2
@@ -203,14 +208,12 @@ push constant 114
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-goto PongGame.run$IF_END3
-label PongGame.run$IF_ELSE3
-label PongGame.run$IF_END3
+label IF_FALSE3
 push constant 0
 return
+function PongGame.moveBall 5
 push argument 0
 pop pointer 0
-function PongGame.moveBall 5
 push this 1
 call Ball.move 1
 pop this 2
@@ -222,8 +225,9 @@ push this 5
 eq
 not
 and
-not
-if-goto PongGame.moveBall$IF_ELSE4
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push this 2
 pop this 5
 push constant 0
@@ -243,8 +247,9 @@ pop local 4
 push this 2
 push constant 4
 eq
-not
-if-goto PongGame.moveBall$IF_ELSE5
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push local 1
 push local 4
 gt
@@ -255,33 +260,34 @@ or
 pop this 3
 push this 3
 not
-not
-if-goto PongGame.moveBall$IF_ELSE6
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
 push local 4
 push local 1
 push constant 10
 add
 lt
-not
-if-goto PongGame.moveBall$IF_ELSE7
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 1
 neg
 pop local 0
-goto PongGame.moveBall$IF_END7
-label PongGame.moveBall$IF_ELSE7
+goto IF_END3
+label IF_FALSE3
 push local 3
 push local 2
 push constant 10
 sub
 gt
-not
-if-goto PongGame.moveBall$IF_ELSE8
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
 push constant 1
 pop local 0
-goto PongGame.moveBall$IF_END8
-label PongGame.moveBall$IF_ELSE8
-label PongGame.moveBall$IF_END8
-label PongGame.moveBall$IF_END7
+label IF_FALSE4
+label IF_END3
 push this 6
 push constant 2
 sub
@@ -301,18 +307,12 @@ pop temp 0
 push this 4
 call Output.printInt 1
 pop temp 0
-goto PongGame.moveBall$IF_END6
-label PongGame.moveBall$IF_ELSE6
-label PongGame.moveBall$IF_END6
-goto PongGame.moveBall$IF_END5
-label PongGame.moveBall$IF_ELSE5
-label PongGame.moveBall$IF_END5
+label IF_FALSE2
+label IF_FALSE1
 push this 1
 push local 0
 call Ball.bounce 2
 pop temp 0
-goto PongGame.moveBall$IF_END4
-label PongGame.moveBall$IF_ELSE4
-label PongGame.moveBall$IF_END4
+label IF_FALSE0
 push constant 0
 return
