--- a/Typescript_Source_Code/code_to_compile/Pong_My/Ball.jack.my.vm
+++ b/Typescript_Source_Code/code_to_compile/Pong_My/Ball.jack.my.vm
@@ -1,8 +1,8 @@
 
+function Ball.new 0
 push constant 15
 call Memory.alloc 1
 pop pointer 0
-function Ball.new 0
 push argument 0
 pop this 0
 push argument 1
@@ -21,39 +21,45 @@ sub
 pop this 13
 push constant 0
 pop this 14
+push pointer 0
+call Ball.show 1
 pop temp 0
 push pointer 0
 return
+function Ball.dispose 0
 push argument 0
 pop pointer 0
-function Ball.dispose 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
 push constant 0
 return
+function Ball.show 0
 push argument 0
 pop pointer 0
-function Ball.show 0
 push constant 1
 neg
 call Screen.setColor 1
 pop temp 0
+push pointer 0
+call Ball.draw 1
 pop temp 0
 push constant 0
 return
+function Ball.hide 0
 push argument 0
 pop pointer 0
-function Ball.hide 0
 push constant 0
 call Screen.setColor 1
 pop temp 0
+push pointer 0
+call Ball.draw 1
 pop temp 0
 push constant 0
 return
+function Ball.draw 0
 push argument 0
 pop pointer 0
-function Ball.draw 0
 push this 0
 push this 1
 push this 0
@@ -66,21 +72,21 @@ call Screen.drawRectangle 4
 pop temp 0
 push constant 0
 return
+function Ball.getLeft 0
 push argument 0
 pop pointer 0
-function Ball.getLeft 0
 push this 0
 return
+function Ball.getRight 0
 push argument 0
 pop pointer 0
-function Ball.getRight 0
 push this 0
 push constant 5
 add
 return
+function Ball.setDestination 3
 push argument 0
 pop pointer 0
-function Ball.setDestination 3
 push argument 0
 push this 0
 sub
@@ -145,9 +151,11 @@ call Math.multiply 2
 pop this 6
 push constant 0
 return
+function Ball.move 0
 push argument 0
 pop pointer 0
-function Ball.move 0
+push pointer 0
+call Ball.hide 1
 pop temp 0
 push this 4
 push constant 0
@@ -285,12 +293,14 @@ pop this 1
 goto Ball.move$IF_END11
 label Ball.move$IF_ELSE11
 label Ball.move$IF_END11
+push pointer 0
+call Ball.show 1
 pop temp 0
 push this 14
 return
+function Ball.bounce 5
 push argument 0
 pop pointer 0
-function Ball.bounce 5
 push this 2
 push constant 10
 call Math.divide 2
@@ -417,8 +427,10 @@ pop local 0
 label Ball.bounce$IF_END16
 label Ball.bounce$IF_END15
 label Ball.bounce$IF_END14
+push pointer 0
 push local 0
 push local 1
+call Ball.setDestination 3
 pop temp 0
 push constant 0
 return
